# chatui

./: .gitignore  README.md
backend/: .env.example  add_user.py  app.py  auth.py  db.py  pyproject.toml  serve.sh  vllm_client.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/: ChatInput.tsx  ChatMessage.tsx  ModelPicker.tsx  SearchModal.tsx  SettingsModal.tsx  Sidebar.tsx  ThemeProvider.tsx  UserMenu.tsx
frontend/lib/: theme.ts  types.ts  useModalTransition.ts
