[project]
name = "chatui-backend"
version = "0.1.0"
description = "FastAPI backend for chatui - a ChatGPT-like web UI on top of vllm-router"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.2.2",
    "bcrypt>=4.2.0",
    "pyjwt>=2.10.0",
]
